@startuml fino

class Cliente {
    -fabrica : FactoyAbstract
    +solicitar() 
}

interface FactoyAbstract {
    +crearCuerpo() : ICuerpo
    +crearMontura() : IMontura
    +crearArmadura() : IArmadura
    +crearArma() : IArma
}

interface ICuerpo {
    +analizar()
}

interface IMontura {
    +montar()
    +bajarse()
}

interface IArmadura {
    +equipar()
    +arrojar()
}

interface IArma {
    +atacar()
    +parry()
}

class FabricarHumanos {
    +crearCuerpo() : ICuerpo
    +crearMontura() : IMontura
    +crearArmadura() : IArmadura
    +crearArma() : IArma
}

class FabricarEnanos {
    +crearCuerpo() : ICuerpo
    +crearMontura() : IMontura
    +crearArmadura() : IArmadura
    +crearArma() : IArma
}

class FabricarElfos {
    +crearCuerpo() : ICuerpo
    +crearMontura() : IMontura
    +crearArmadura() : IArmadura
    +crearArma() : IArma
}

class FabricarOrcos {
    +crearCuerpo() : ICuerpo
    +crearMontura() : IMontura
    +crearArmadura() : IArmadura
    +crearArma() : IArma
}

' Cuerpos
class CuerpoHumano implements ICuerpo {
    
}
class CuerpoEnanos implements ICuerpo {

}
class CuerpoElfos implements ICuerpo {

}
class CuerpoOrcos implements ICuerpo {

}
' Monturas
class MonturaHumano implements IMontura {
    
}
class MonturaEnanos implements IMontura {

}
class MonturaElfos implements IMontura {

}
class MonturaOrcos implements IMontura {

}
' Armaduras
class ArmaduraHumano implements IArmadura {
    
}
class ArmaduraEnanos implements IArmadura {

}
class ArmaduraElfos implements IArmadura {

}
class ArmaduraOrcos implements IArmadura {

}
' Arma
class ArmaHumano implements IArma {
    
}
class ArmaEnanos implements IArma {

}
class ArmaElfos implements IArma {

}
class ArmaOrcos implements IArma {

}

' Relaciones
Cliente --> FactoyAbstract : utiliza
Cliente --> ICuerpo : utiliza
Cliente --> IMontura : utiliza
Cliente --> IArmadura : utiliza
Cliente --> IArma : utiliza


FactoyAbstract <|-- FabricarHumanos
FactoyAbstract <|-- FabricarEnanos
FactoyAbstract <|-- FabricarElfos
FactoyAbstract <|-- FabricarOrcos


ICuerpo <|-- CuerpoHumano
ICuerpo <|-- CuerpoEnanos
ICuerpo <|-- CuerpoElfos
ICuerpo <|-- CuerpoOrcos

IMontura <|-- MonturaHumano
IMontura <|-- MonturaEnanos
IMontura <|-- MonturaElfos
IMontura <|-- MonturaOrcos

IArmadura <|-- ArmaduraHumano
IArmadura <|-- ArmaduraEnanos
IArmadura <|-- ArmaduraElfos
IArmadura <|-- ArmaduraOrcos

IArma <|-- ArmaHumano
IArma <|-- ArmaEnanos
IArma <|-- ArmaElfos
IArma <|-- ArmaOrcos

@enduml
